samples/_failures_safe/1761158091_d159be_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a081fee0.c: In function ‘main’:
./samples/SAFE/__tmp_a081fee0.c:163:20: error: missing terminating " character
  163 |             printf("Invalid log level\n
      |                    ^~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a081fee0.c:163:13: error: expected expression at end of input
  163 |             printf("Invalid log level\n
      |             ^~~~~~
./samples/SAFE/__tmp_a081fee0.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a081fee0.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a081fee0.c:163:13: error: expected declaration or statement at end of input
